--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,13 +1,14 @@
 @import "~bootstrap/scss/bootstrap.scss";
 
-/* 
+.square{
+    height: 5rem;
+    width: 5rem;
+    background-color:white;
+    border: black 1px solid; 
+}
 
-    You can write your own styles here...
-    
-    
-    ...Or you can use the import command to include 
-    other sylesheets into your bunde as well, e.j:
-    
-    import 'relative/path/to/stylesheet.scss';
-
-*/
+.fila {
+    height: 5rem;
+    display: flex;
+    justify-content: center;
+}
