--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -19,6 +19,7 @@
     justify-content: center;
 }
 
-.board {
-    margin-top: 7rem;
+.modal{
+    display: flex;
+    justify-content: space-around;
 }
