--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,25 +1,74 @@
 @import "~bootstrap/scss/bootstrap.scss";
-.body{
-    background-color: green;
+body{
+    font-family: 'Shadows Into Light', cursive;
+    background-image: url(https://images.unsplash.com/photo-1502842294453-95e49a5ce544?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1489&q=80);
+    background-size: cover;
+    background-position: center;
 }
 .square{
-    height: 10rem;
-    width: 10rem;
-    background-color:white;
-    border: grey 0.3rem solid; 
-    font-size: 3rem;
+    height: 8rem;
+    width: 8rem;
+    border: #e1e1e1 0.2rem solid;
+    font-family: 'Shadows Into Light', cursive; 
+    font-size: 7rem;
+    color: #B81919;
     margin: 0.1rem;
     display: flex;
     justify-content: center;
     align-items: center;
+    border-radius: 5%;
 }
-
+.board{
+    margin-top: 2rem;
+    padding-top: 1.2rem;
+}
 .rowBoard {
     display: flex;
     justify-content: center;
 }
-
+span {
+    font-size: 2rem;
+    color: whitesmoke;
+}
 .modal{
     display: flex;
     justify-content: space-around;
+}
+.title{
+    margin-top: 1rem;
+}
+h1{
+    font-size: 3rem;
+    font-weight: bold;
+}
+h3{
+    font-size: 2rem;
+    font-weight: bold;
+    color: whitesmoke;
+}
+.fa-times{
+    color: #B81919
+}
+.fa-circle{
+color: #B81919
+}
+.modalTitle{
+    font-size: 2rem;
+    color: grey;
+    font-weight: bold;
+}
+input{
+    border: none;
+    display: flex;
+    justify-content: center;
+    font-size: 1.3rem;
+}
+.modalHeader{
+    border: none;
+}
+.modalFooter {
+    border: none;
+}
+.modalContent{
+    border: none;
 }
