--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -4,6 +4,7 @@ body{
     background-image: url(https://images.unsplash.com/photo-1502842294453-95e49a5ce544?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1489&q=80);
     background-size: cover;
     background-position: center;
+    margin-bottom: -5rem;
 }
 .square{
     height: 8rem;
@@ -19,8 +20,7 @@ body{
     border-radius: 5%;
 }
 .board{
-    margin-top: 2rem;
-    padding-top: 1.2rem;
+    margin-top: 1rem;
 }
 .rowBoard {
     display: flex;
@@ -30,22 +30,31 @@ span {
     font-size: 2rem;
     color: whitesmoke;
 }
+p {
+    font-size: 3rem;
+    color: red;
+    font-weight: bolder;
+    margin-left: 1rem;
+}
 .modal{
     display: flex;
     justify-content: space-around;
 }
 .title{
-    margin-top: 1rem;
+    margin-top: 5rem;
+    color: white;
 }
+
 h1{
     font-size: 3rem;
     font-weight: bold;
 }
 h3{
     font-size: 2rem;
-    font-weight: bold;
-    color: whitesmoke;
+    font-weight: bolder;
+    color: #643737;
 }
+
 .fa-times{
     color: #B81919
 }
@@ -60,8 +69,8 @@ color: #B81919
 input{
     border: none;
     display: flex;
-    justify-content: center;
     font-size: 1.3rem;
+    text-align: center;
 }
 .modalHeader{
     border: none;
@@ -71,4 +80,7 @@ input{
 }
 .modalContent{
     border: none;
+}
+.playButton{
+    margin-top: -2.8rem;
 }
